Change image sizes. Change owl item css to prevent flickering

--- a/css/style.css
+++ b/css/style.css
@@ -378,6 +378,7 @@ img.img-circle.team-img {
 #clients .item {
     width: 140px;
     height: 100px;
+    position: relative;
 }
 
 #clients .item img {
